# napari-deepfinder

./: .buildinfo  README.md  about.html  developers.html  genindex.html  guide.html  help.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: sphinx.yml  test_and_deploy.yml
.napari/: config.yml
_autosummary/: napari_deepfinder.html  src.html
_sources/: about.rst.txt  developers.rst.txt  guide.rst.txt  help.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/_autosummary/: napari_deepfinder.rst.txt
docs/: Makefile  about.rst  conf.py  developers.rst  index.rst  quickstart.rst
src/napari_deepfinder/: __init__.py  _cluster_widget.py  _orthoview_widget.py  _reader.py  _segmentation_widget.py  _widget.py  _writer.py  napari.yaml
src/napari_deepfinder/_tests/: test_reader.py  test_widget.py  test_writer.py
