[metadata]
name = napari_deepfinder
version = 0.0.1
description = A napari plugin for the DeepFinder library which includes display, annotation, target generation, segmentation and clustering functionalities. An orthoslice view has been added for an easier visualisation and annotation process.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deep-finder/napari-deepfinder
author = Constantin Aronssohn
author_email = cnstt@tutanota.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/deep-finder/napari-deepfinder/issues
    Documentation = https://github.com/deep-finder/napari-deepfinder#README.md
    Source Code = https://github.com/deep-finder/napari-deepfinder
    User Support = https://github.com/deep-finder/napari-deepfinder/issues

[options]
packages = find:
install_requires =
    deepfinder@git+https://gitlab.inria.fr/caronsso/deep-finder.git@improve-current-pip
    h5py
    lxml
    magicgui
    mrcfile
    napari
    numpy
    pandas
    pillow
    qtpy
    scikit-image
    scipy
    typing
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-deepfinder = napari_deepfinder:napari.yaml

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
