[metadata]
name = napari-deepfinder
version = 0.0.1
author = Constantin Aronssohn
author_email = cnstt@tutanota.com
url = https://github.com/deep-finder/napari-deepfinder
license = GPL-3.0-only
description = A napari plugin for the DeepFinder library which includes display, annotation, target generation, segmentation and clustering functionalities. An orthoslice view has been added for an easier visualisation and annotation process.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/deep-finder/napari-deepfinder/issues
    Documentation = https://deep-finder.github.io/napari-deepfinder/
    Source Code = https://github.com/deep-finder/napari-deepfinder
    User Support = https://github.com/deep-finder/napari-deepfinder/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    em-deepfinder
    numpy
    magicgui
    qtpy
    napari
    scikit-image
    typing
    pandas
    lxml
    pillow
    h5py
    mrcfile
    scipy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-deepfinder = napari_deepfinder:napari.yaml
